# stripe_payment_test

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  manage.py  pyproject.toml  setup.cfg
.github/workflows/: flake8.yml
config/: settings.py  urls.py
payment/: admin.py  mixins.py  models.py  serializers.py  urls.py  views.py
stripe_payment_test/: settings.py  urls.py  wsgi.py
stripe_payment_test/config/: settings.py
templates/: base.html  cart.html  item.html  items_list.html
templates/registration/: login.html  register.html
users/: forms.py  models.py  urls.py  views.py
