[tool.poetry]
name = "stripe-payment-test"
version = "0.1.0"
description = ""
authors = ["Roman Poliakov <roman61394@gmail.com>"]
readme = "README.md"
packages = [{include = "stripe_payment_test"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
stripe = "^5.0.0"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
