[tool.poetry]
name = "stripe-payment-test"
version = "0.1.0"
description = ""
authors = ["Roman Poliakov <roman61394@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
stripe = "^5.0.0"
django-environ = "0.9.0"
django-bootstrap4 = "^22.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
dj-database-url = "^0.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
